Fix vertical alignment of radio icon in small layout

--- a/client/styles/small/_header.scss
+++ b/client/styles/small/_header.scss
@@ -37,7 +37,8 @@
             float: right;
 
             &:before {
-                line-height: 5.25em;
+                font-size: 2em;
+                line-height: 3.875em;
             }
         }
 
