--- a/public/css/jRadio.css
+++ b/public/css/jRadio.css
@@ -2847,25 +2847,26 @@ nav a {
   }
   /* line 39, ../client/styles/small/_header.scss */
   header .radio:before {
-    line-height: 5.25em;
+    font-size: 2em;
+    line-height: 3.875em;
   }
-  /* line 44, ../client/styles/small/_header.scss */
+  /* line 45, ../client/styles/small/_header.scss */
   header .toggle_played {
     display: none;
   }
-  /* line 48, ../client/styles/small/_header.scss */
+  /* line 49, ../client/styles/small/_header.scss */
   header h1 {
     float: left;
     color: transparent;
   }
-  /* line 52, ../client/styles/small/_header.scss */
+  /* line 53, ../client/styles/small/_header.scss */
   header h1:before {
     font-size: 2.333em;
     left: calc(50% - .5em);
     top: inherit;
     bottom: -0.05em;
   }
-  /* line 59, ../client/styles/small/_header.scss */
+  /* line 60, ../client/styles/small/_header.scss */
   header h1:after {
     position: absolute;
     font-size: 1.75em;
